# Npp_ChineseConverter

./: .gitignore  .gitmodules  BuildOpenccDictionaries.bat  CMakeLists.txt  ChineseConverter.sln  Configure.bat  LICENSE.txt  NOTICE.txt  SubmodulesInit.bat  readme.md
.github/workflows/: CI_build.yml  build.yml  sync_nppsys.yml
licenses/: LICENSE.xz
scripts/: copy_dicts.py  file_to_c_array.py
src/: BasicInclude.hpp  ChineseConverter.rc  Common.cpp  Common.hpp  DecompressConfig.cpp  DecompressConfig.hpp  Main.cpp  PluginDefinition.cpp  PluginDefinition.h  opencc_data.h  resource.h
vs.proj/: ChineseConverter.vcxproj  ChineseConverter.vcxproj.filters
